apps/kubernetes-dashboard/ingressRoute.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: kubernetes-dashboard-websecure
  namespace: default
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`kubernetes.barcini.duckdns.org`)
      kind: Rule
      services:
        - name: kubernetes-dashboard
          port: 443
  tls: # This route uses TLS
    certResolver: myresolver
